use MethodHandle for unmap